--- a/trunk/src/ui/gastos.ui
+++ b/trunk/src/ui/gastos.ui
@@ -17,7 +17,7 @@
    <item row="0" column="0">
     <layout class="QGridLayout" name="gridLayout" columnstretch="0,0,0,0,0">
      <property name="spacing">
-      <number>6</number>
+      <number>3</number>
      </property>
      <item row="3" column="0" colspan="5">
       <widget class="QTableView" name="gastosTableView">
@@ -104,17 +104,8 @@
         <property name="fieldGrowthPolicy">
          <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
         </property>
-        <property name="leftMargin">
+        <property name="margin">
          <number>0</number>
-        </property>
-        <property name="topMargin">
-         <number>6</number>
-        </property>
-        <property name="rightMargin">
-         <number>0</number>
-        </property>
-        <property name="bottomMargin">
-         <number>6</number>
         </property>
         <item row="0" column="0">
          <widget class="QLabel" name="label">
