--- a/trunk/src/ui/reserva.ui
+++ b/trunk/src/ui/reserva.ui
@@ -1,7 +1,8 @@
-<ui version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>reservaDialog</class>
- <widget class="QDialog" name="reservaDialog" >
-  <property name="geometry" >
+ <widget class="QDialog" name="reservaDialog">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
@@ -9,62 +10,55 @@
     <height>701</height>
    </rect>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>Nueva reserva</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout" >
-   <item row="1" column="0" >
-    <widget class="QDialogButtonBox" name="buttonBox" >
-     <property name="orientation" >
-      <enum>Qt::Horizontal</enum>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="0" >
-    <layout class="QGridLayout" name="gridLayout_2" >
-     <item row="0" column="0" >
-      <widget class="QLabel" name="label" >
-       <property name="text" >
+  <layout class="QGridLayout" name="gridLayout">
+   <item row="1" column="0">
+    <layout class="QGridLayout" name="gridLayout_2">
+     <item row="0" column="0">
+      <widget class="QLabel" name="label">
+       <property name="text">
         <string>Unidad:</string>
        </property>
       </widget>
      </item>
-     <item row="0" column="1" >
-      <widget class="QComboBox" name="unidadCombo" />
+     <item row="0" column="1">
+      <widget class="QComboBox" name="unidadCombo"/>
      </item>
-     <item row="1" column="0" >
-      <widget class="QLabel" name="label_2" >
-       <property name="text" >
+     <item row="1" column="0">
+      <widget class="QLabel" name="label_2">
+       <property name="text">
         <string>Filtrar huéspedes:</string>
        </property>
       </widget>
      </item>
-     <item row="1" column="1" colspan="9" >
-      <widget class="QLineEdit" name="huespedLine" />
+     <item row="1" column="1" colspan="9">
+      <widget class="QLineEdit" name="huespedLine"/>
      </item>
-     <item rowspan="3" row="2" column="1" colspan="9" >
-      <widget class="QTableView" name="huespedView" />
+     <item row="2" column="1" rowspan="3" colspan="9">
+      <widget class="QTableView" name="huespedView"/>
      </item>
-     <item row="8" column="0" >
-      <widget class="QLabel" name="label_3" >
-       <property name="text" >
+     <item row="8" column="0">
+      <widget class="QLabel" name="label_3">
+       <property name="text">
         <string>Inicio Prereserva:</string>
        </property>
       </widget>
      </item>
-     <item row="8" column="1" >
-      <widget class="QDateEdit" name="inicioPreDate" >
-       <property name="calendarPopup" >
+     <item row="8" column="1">
+      <widget class="QDateEdit" name="inicioPreDate">
+       <property name="calendarPopup">
         <bool>true</bool>
        </property>
       </widget>
      </item>
-     <item row="8" column="9" >
-      <spacer name="horizontalSpacer" >
-       <property name="orientation" >
+     <item row="8" column="9">
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeHint" stdset="0" >
+       <property name="sizeHint" stdset="0">
         <size>
          <width>40</width>
          <height>20</height>
@@ -72,29 +66,29 @@
        </property>
       </spacer>
      </item>
-     <item row="2" column="0" >
-      <widget class="QLabel" name="label_11" >
-       <property name="text" >
+     <item row="2" column="0">
+      <widget class="QLabel" name="label_11">
+       <property name="text">
         <string>Huésped:</string>
        </property>
-       <property name="alignment" >
+       <property name="alignment">
         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
        </property>
       </widget>
      </item>
-     <item row="5" column="1" colspan="3" >
-      <widget class="QPushButton" name="nuevoBut" >
-       <property name="text" >
+     <item row="5" column="1" colspan="3">
+      <widget class="QPushButton" name="nuevoBut">
+       <property name="text">
         <string>Crear nuevo huésped</string>
        </property>
       </widget>
      </item>
-     <item row="3" column="0" >
-      <spacer name="verticalSpacer" >
-       <property name="orientation" >
+     <item row="3" column="0">
+      <spacer name="verticalSpacer">
+       <property name="orientation">
         <enum>Qt::Vertical</enum>
        </property>
-       <property name="sizeHint" stdset="0" >
+       <property name="sizeHint" stdset="0">
         <size>
          <width>20</width>
          <height>40</height>
@@ -102,143 +96,150 @@
        </property>
       </spacer>
      </item>
-     <item row="20" column="0" >
-      <widget class="QLabel" name="label_12" >
-       <property name="text" >
+     <item row="20" column="0">
+      <widget class="QLabel" name="label_12">
+       <property name="text">
         <string>Seña:</string>
        </property>
       </widget>
      </item>
-     <item row="20" column="1" >
-      <widget class="QDoubleSpinBox" name="seniaSpin" >
-       <property name="prefix" >
+     <item row="20" column="1">
+      <widget class="QDoubleSpinBox" name="seniaSpin">
+       <property name="prefix">
         <string>$ </string>
        </property>
-       <property name="maximum" >
+       <property name="maximum">
         <double>9999.989999999999782</double>
        </property>
       </widget>
      </item>
-     <item row="13" column="4" >
-      <widget class="QDateEdit" name="finDate" >
-       <property name="calendarPopup" >
+     <item row="13" column="4">
+      <widget class="QDateEdit" name="finDate">
+       <property name="calendarPopup">
         <bool>true</bool>
        </property>
       </widget>
      </item>
-     <item row="13" column="3" >
-      <widget class="QLabel" name="label_6" >
-       <property name="text" >
+     <item row="13" column="3">
+      <widget class="QLabel" name="label_6">
+       <property name="text">
         <string>Fin Reserva:</string>
        </property>
       </widget>
      </item>
-     <item row="8" column="5" >
-      <widget class="QLabel" name="label_7" >
-       <property name="text" >
+     <item row="8" column="5">
+      <widget class="QLabel" name="label_7">
+       <property name="text">
         <string>Hora CheckIn:</string>
        </property>
       </widget>
      </item>
-     <item row="8" column="6" >
-      <widget class="QTimeEdit" name="inTime" />
+     <item row="8" column="6">
+      <widget class="QTimeEdit" name="inTime"/>
      </item>
-     <item row="13" column="6" >
-      <widget class="QTimeEdit" name="outTime" />
+     <item row="13" column="6">
+      <widget class="QTimeEdit" name="outTime"/>
      </item>
-     <item row="13" column="5" >
-      <widget class="QLabel" name="label_8" >
-       <property name="text" >
+     <item row="13" column="5">
+      <widget class="QLabel" name="label_8">
+       <property name="text">
         <string>Hora CheckOut:</string>
        </property>
       </widget>
      </item>
-     <item row="8" column="7" >
-      <widget class="QLabel" name="label_9" >
-       <property name="text" >
+     <item row="8" column="7">
+      <widget class="QLabel" name="label_9">
+       <property name="text">
         <string>Estado:</string>
        </property>
       </widget>
      </item>
-     <item row="8" column="8" >
-      <widget class="QComboBox" name="estadoCombo" >
+     <item row="8" column="8">
+      <widget class="QComboBox" name="estadoCombo">
        <item>
-        <property name="text" >
+        <property name="text">
          <string>Pre Reservado</string>
         </property>
        </item>
        <item>
-        <property name="text" >
+        <property name="text">
          <string>Reservado</string>
         </property>
        </item>
        <item>
-        <property name="text" >
+        <property name="text">
          <string>Reserva en curso</string>
         </property>
        </item>
        <item>
-        <property name="text" >
+        <property name="text">
          <string>Reserva terminada</string>
         </property>
        </item>
        <item>
-        <property name="text" >
+        <property name="text">
          <string>Reserva cancelada</string>
         </property>
        </item>
       </widget>
      </item>
-     <item row="13" column="7" >
-      <widget class="QLabel" name="label_10" >
-       <property name="text" >
+     <item row="13" column="7">
+      <widget class="QLabel" name="label_10">
+       <property name="text">
         <string>Temporada:</string>
        </property>
       </widget>
      </item>
-     <item row="13" column="8" >
-      <widget class="QComboBox" name="temporadaCombo" >
+     <item row="13" column="8">
+      <widget class="QComboBox" name="temporadaCombo">
        <item>
-        <property name="text" >
+        <property name="text">
          <string>Alta</string>
         </property>
        </item>
        <item>
-        <property name="text" >
+        <property name="text">
          <string>Baja</string>
         </property>
        </item>
       </widget>
      </item>
-     <item row="13" column="0" >
-      <widget class="QLabel" name="label_4" >
-       <property name="text" >
+     <item row="13" column="0">
+      <widget class="QLabel" name="label_4">
+       <property name="text">
         <string>Fin Prereserva:</string>
        </property>
       </widget>
      </item>
-     <item row="13" column="1" >
-      <widget class="QDateEdit" name="finPreDate" >
-       <property name="calendarPopup" >
+     <item row="13" column="1">
+      <widget class="QDateEdit" name="finPreDate">
+       <property name="calendarPopup">
         <bool>true</bool>
        </property>
       </widget>
      </item>
-     <item row="8" column="3" >
-      <widget class="QLabel" name="label_5" >
-       <property name="text" >
+     <item row="8" column="3">
+      <widget class="QLabel" name="label_5">
+       <property name="text">
         <string>Inicio Reserva:</string>
        </property>
       </widget>
      </item>
-     <item row="8" column="4" >
-      <widget class="QDateEdit" name="inicioDate" >
-       <property name="calendarPopup" >
+     <item row="8" column="4">
+      <widget class="QDateEdit" name="inicioDate">
+       <property name="calendarPopup">
         <bool>true</bool>
        </property>
       </widget>
      </item>
     </layout>
+   </item>
+   <item row="2" column="0">
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="standardButtons">
+      <set>QDialogButtonBox::NoButton</set>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
@@ -248,41 +249,7 @@
   <tabstop>huespedView</tabstop>
   <tabstop>nuevoBut</tabstop>
   <tabstop>inicioPreDate</tabstop>
-  <tabstop>buttonBox</tabstop>
  </tabstops>
  <resources/>
- <connections>
-  <connection>
-   <sender>buttonBox</sender>
-   <signal>accepted()</signal>
-   <receiver>reservaDialog</receiver>
-   <slot>accept()</slot>
-   <hints>
-    <hint type="sourcelabel" >
-     <x>248</x>
-     <y>254</y>
-    </hint>
-    <hint type="destinationlabel" >
-     <x>157</x>
-     <y>274</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>buttonBox</sender>
-   <signal>rejected()</signal>
-   <receiver>reservaDialog</receiver>
-   <slot>reject()</slot>
-   <hints>
-    <hint type="sourcelabel" >
-     <x>316</x>
-     <y>260</y>
-    </hint>
-    <hint type="destinationlabel" >
-     <x>286</x>
-     <y>274</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
