--- a/trunk/src/ui/test.ui
+++ b/trunk/src/ui/test.ui
@@ -39,7 +39,7 @@
      <item row="3" column="0">
       <widget class="QLabel" name="label_2">
        <property name="text">
-        <string>Huesped:</string>
+        <string>Huésped:</string>
        </property>
       </widget>
      </item>
@@ -142,7 +142,7 @@
      <item row="4" column="1">
       <widget class="QPushButton" name="pushButton_2">
        <property name="text">
-        <string>Buscar Huesped</string>
+        <string>Buscar Huésped</string>
        </property>
       </widget>
      </item>
