--- a/src/ui/gastos.ui
+++ b/src/ui/gastos.ui
@@ -59,7 +59,7 @@
      <item row="8" column="0">
       <widget class="QLabel" name="label_4">
        <property name="text">
-        <string>Descripcion:</string>
+        <string>Descripción:</string>
        </property>
       </widget>
      </item>
