--- a/src/ui/reserva.ui
+++ b/src/ui/reserva.ui
@@ -99,7 +99,7 @@
      <item row="20" column="0">
       <widget class="QLabel" name="label_12">
        <property name="text">
-        <string>Sena:</string>
+        <string>Seña:</string>
        </property>
       </widget>
      </item>
